# brave-api

./: .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE.MD  Makefile  README.md  pyproject.toml  test_api.ipynb
.github/: dependabot.yaml  stale.yml
.github/actions/release/: release.yaml
.github/workflows/: bump-and-rebase.yaml  pull-request.yaml  release.yaml  reset-branch.yaml  status-checks.yaml
src/apo/: __init__.py  apo.py  gradient_descent.py  openai_utils.py  prompt_template.py
src/apo/examples/: sarcasm.py
src/apo/prompts/beam_search/: user.json
src/apo/prompts/example_base_prompts/sarcasm/: user.json
src/apo/prompts/gradient_descent/edit_prompt_w_gradient/: user.json
src/apo/prompts/gradient_descent/generate_gradients/: user.json
src/apo/utils/: parser.py
src/brave/: __init__.py  async_brave.py  client.py  exceptions.py  models.py  sync.py
src/brave/goggles/: README.md  __init__.py  directory.py  thought_leadership.goggle
src/brave/types/: __init__.py  language.py  not_implemented.py  profile.py  query.py  result.py  search.py  search_result.py  thumbnail.py  web_search_response.py
src/brave/types/image/: image_query.py  image_result.py  image_search_response.py  properties.py
src/brave/types/shared/: meta_url.py  thumbnail.py
src/brave/types/web/: answer.py  article.py  book.py  button_result.py  contact.py  data_provider.py  deep_result.py  discussions.py  faq.py  image.py  info_box.py  knowledge_graph.py  language.py  location_result.py  mixed_response.py  movie_data.py  news.py  offer.py  opening_hours.py  person.py  picture_results.py  postal_address.py  price.py  product.py  rating.py  result.py  reviews.py  search_result.py  unit.py  url.py  videos.py  web_search_response.py
tests/test_responses/: blue_tack_minimal.json
tests/unit/: __init__.py  test_apo.py  test_async_brave.py  test_client.py  test_sarcasm_example.py  test_sync_brave.py
